--- a/strawberry.org
+++ b/strawberry.org
@@ -235,7 +235,7 @@ Determine whether the objective function also has information on feasibility.
     printf('$c$ best constraint value and $g_b$ best generation.\n');
     printf('| %9s |', 'gen')
     if nz > 1
-      for i=1:nz, printf(' %6sz%02d |', '', i); endfor
+      for i=1:nz, printf('  $z_{%02d}$ |', i); endfor
       if constrained; printf(' %9s |', 'c'); endif
     else
       index = nx;
@@ -370,17 +370,23 @@ The first, controlled by the ~output~ argument to the function, is a single line
   endif
 #+end_src
 **** pareto set to file
-The second is the output of the full population to an automatically named file (based on time stamp and generation number).  The default is to not generate this output.  This output is controlled by setting the global variable ~strawberry_output_population~ which should be set to a positive number that specifies which generations to output (modulo == 0).  This output is only available for multi-objective problems.
+The second is the output of the full population to an automatically named file (based on time stamp and generation number).  The default is to not generate this output.  This output is controlled by setting the global variable ~strawberry_output_population~ which should be set to a positive number that specifies which generations to output (modulo == 0).
+
+This output is only available for multi-objective problems and a file will be saved only if there is at least one feasible member in the population.
 #+name: outputpopulation
 #+begin_src octave
-  if nz > 1 && ...
-     strawberry_output_population > 0 && ...
-     0 == mod(gen,strawberry_output_population)
-    filename = sprintf('%s-%s-%06d.data', 'strawberry-population', ...
-                       strftime('%Y%m%d-%H:%M:%S', localtime(time())), ...
-                       gen);
-    poptrans = pop(:,findpareto(pop(nx+1:nx+nz,:)))';
-    save('-text',filename,'poptrans');
+  if nz > 1 ...
+     && strawberry_output_population > 0 ...
+     && 0 == mod(gen,strawberry_output_population)
+    feasible = pop(:,pop(end,:) <= 0);
+    nfeas = size(feasible,2);
+    if nfeas > 0
+      filename = sprintf('%s-%s-%06d.data', 'strawberry-population', ...
+                         strftime('%Y%m%d-%H:%M:%S', localtime(time())), ...
+                         gen);
+      poptrans = feasible(:,findpareto(feasible(nx+1:nx+nz,:)))';
+      save('-text',filename,'poptrans');
+    endif
   endif
 #+end_src 
 *** select and propagate
@@ -644,7 +650,7 @@ To accomplish the latter, we consider a ranking that takes into account how good
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = '2017.02.04 16:20:05';
+      strawberry_version = '2017.02.04 17:06:59';
       mosd_initialise
       moga_initialise
       printf (': STRAWBERRY %s, main function\n', strawberry_version)
