--- a/strawberry.org
+++ b/strawberry.org
@@ -62,7 +62,8 @@ Major version log:
 - July 2016 :: multi-objective version extended to work for any number of criteria instead of just 2.
 - October 2015 :: started work on a MI-Strawberry version, hopefully as upwards compatible as possible.
 - September 2015 :: implemented a rank based fitness, used to prepare results in [[file:~/synced/research/multiobjective.optimisation/strawberry/paper.pdf][the paper on understanding the impacts of constraints]].  There is now a choice of fitness functions as the old, Pareto based, fitness function is still available (cf. Deb (2000) for an example).
-* TODO [4/13] improvements or bugs                            :noexport:
+* TODO [4/14] improvements or bugs                            :noexport:
+- [ ] define a GAMS interface; for multi-objective problem, solve the same model for each criterion individually to generate the objective function value for each design point. 
 - [ ] Note taken at MCDA meeting in Padova
   implement a relaxed dominance definition in Strawberry to better explore the set of non-dominated points.  \epsilon would be based on range of values expected or range actually existing in a population. the identification of an \epsilon based non-dominated set will be non-deterministic or not unique.  Does this matter?
 - [ ] keep an elite set (best of set ∪ best in population) which is not involved in selection but which is presented at the end.  This is to avoid non-dominated solutions that are lost along the way when dealing with multi-objective problems.
@@ -649,7 +650,7 @@ To accomplish the latter, we consider a ranking that takes into account how good
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = '2017.04.24 17:33:39';
+      strawberry_version = '2017.05.08 10:38:38';
       mosd_initialise
       moga_initialise
       printf (': STRAWBERRY %s, main function\n', strawberry_version)
