--- a/fresa.org
+++ b/fresa.org
@@ -7,16 +7,19 @@
 
 #+toc: headlines 1
 
-* TODO bugs and new features [0/3]                            :noexport:
+* TODO bugs and new features [2/6]                            :noexport:
+- [ ] consider splicing out the selected member from the population
+- [ ] parallelise the evaluation of the new members of the population
+- [ ] add counters to be able to display number of function evaluations etc.
 - [ ] use constraint information in fitness calculations
-- [ ] allow for user specified /neighbour/ function
-- [ ] implement MINLP example
+- [X] allow for user specified /neighbour/ function
+- [X] implement MINLP example
 * Overview and introduction
 /Fresa/ is an implementation of a /plant propagation algorithm/ in [[http://www.julialang.org/][Julia]] programming language.  Our original version was called [[file:strawberry.org][Strawberry]], written in Octave (and usable in MATLAB).  Please see the [[file:strawberry.org][documentation]] of Strawberry for a longer description of the history of these codes, the conditions on which you may use these codes and which articles to cite.  The move to Julia is motivated by the desire to use /open source/ and /free/ (as in beer) software only while also ensuring that the tools are computationally efficient.  Octave has not kept up with developments in /just in time/ compilation and, although has some features not available in MATLAB, it is not a modern language.  Julia provides many of the capabilities of Octave while also being computationally efficient and providing many more modern features such as built-in parallelism and multi-dispatch.
 
 This document has been written using [[http://orgmode.org/][org mode]] in the [[https://www.gnu.org/software/emacs/][Emacs]] text editor.  Org allows for /literate programming/ and uses /tangling/ to generate the actual source files for the code.  The code, tangled from this file, can be found here: call_distribution().
 
-All code (either version) is copyright © src_shell{echo -n $(date +%Y)}, Eric S Fraga, all rights reserved.  Permission is given to use this code for evaluation purposes. The code is made available with no warranty or guarantee of any kind.  Use at own risk.  
+All code (either version) is copyright © {{{time(%Y)}}}, Eric S Fraga, all rights reserved.  Permission is given to use this code for evaluation purposes. The code is made available with no warranty or guarantee of any kind.  Use at own risk.  
 
 Please let [[mailto:e.fraga@ucl.ac.uk?subject=The%20Strawberry%20code][the author know]] if you download the code.  Further, if either /Fresa/ or /Strawberry/ codes are used and this use leads to publications of any type, please do cite the publications listed in the first paragraph of the documentation for [[file:strawberry.org][Strawberry]].  Feedback, including bug reports, is most welcome.
 
@@ -24,12 +27,12 @@ In the following code, we assume column vectors for decision variables and objec
 
 ** Upload to web site                                        :noexport:
 #+name: upload
-#+begin_src shell :results none :exports none
+#+begin_src shell :results none :exports none :eval never-export
   scp -r fresa.org fresa.html Fresa.jl ltximg socrates.ucl.ac.uk:html.pub
 #+end_src
 ** Code for creating a distribution                          :noexport:
 #+name: distribution
-#+begin_src shell :results output raw :exports results
+#+begin_src shell :results output raw :exports results :eval never-export
   echo [[file:./Fresa.jl][Fresa.jl]]
 #+end_src 
 * Version information
@@ -52,7 +55,7 @@ The objective function, =f(x)=, returns two variables: =z=, the vector of object
 #+begin_src julia
   module Fresa
 
-  version = "2017.09.04 15:08:21"
+  version = "2017.09.05 06:30:47"
   function __init__()
       println("Fresa PPA $version")
   end
