--- a/fresa.org
+++ b/fresa.org
@@ -55,7 +55,7 @@ The objective function, =f(x)=, returns two variables: =z=, the vector of object
 #+begin_src julia
   module Fresa
   export solve
-  version = "2017.09.05 16:30:56"
+  version = "2017.09.05 16:50:22"
   function __init__()
       println("Fresa PPA $version")
   end
@@ -114,33 +114,36 @@ This function uses a helper function, defined below, to assign a fitness to a ve
 
 #+name: vectorfitness
 #+begin_src julia
-  function vectorfitness(m,v)
-      # println("VF: v=$v")
-      # println("  : of size $(size(v))")
-      if m == 1                   # single objective 
-          l = length(v)
-          s = sortperm(v[1,:])
-          zmin = v[s[1]]
-          zmax = v[s[l]]
-          if l == 1 || abs(zmax-zmin) < eps()
-              fit = 0.5*ones(l)
-          else
-              # avoid extreme 0,1 values
-              fit = tanh.((zmax - v) / (zmax - zmin) - 0.5)+0.5
-          end
-      else                  # multi-objective
-          m, l = size(v)
-          rank = ones(m,l); #rank of each solution for each objective function 
-          for i=1:m
-              rank[i,sortperm(v[i,:])] = 1:l;
-          end
-          # hadamard product of ranks
-          fitness = map(x->prod(x), rank[:,i] for i=1:l)
-          # normalise and reverse meaning (1=best, 0=worst)
-          if l == 1
-              fit = [0.5]
-          else
-              # avoid extreme 0,1 values
+  function vectorfitness(v)
+      # determine number of objectives (or pseudo-objectives) to consider in
+      # ranking
+      l = length(v)
+      if l == 1
+          # no point in doing much as there is only one solution
+          fit = [0.5]
+      else
+          m = length(v[1])
+          # println("VF: v=$v")
+          # println("  : of size $(size(v))")
+          if m == 1                   # single objective 
+              s = sortperm(v)
+              zmin = v[s[1]]
+              zmax = v[s[l]]
+              if abs(zmax-zmin) < eps()
+                  fit = 0.5*ones(l)
+              else
+                  # avoid extreme 0,1 values
+                  fit = tanh.((zmax - v) / (zmax - zmin) - 0.5)+0.5
+              end
+          else                  # multi-objective
+              rank = ones(m,l); #rank of each solution for each objective function 
+              for i=1:m
+                  rank[i,sortperm([v[j][i] for j=1:l])] = 1:l;
+              end
+              # hadamard product of ranks
+              fitness = map(x->prod(x), rank[:,i] for i=1:l)
+              # normalise and reverse meaning (1=best, 0=worst) while avoiding
+              # extreme 0,1 values using the hyperbolic tangent
               fit = tanh.(0.5 - fitness / maximum(fitness)) + 0.5
           end
       end
